force-app/main/default/objects/Custom_Path_Mapping__c/Custom_Path_Mapping__c.object-meta.xml
<CustomObject>
    <label>Custom Path Mapping</label>
    <pluralLabel>Custom Path Mappings</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CPM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>