force-app/main/default/objects/Custom_Path_Mapping__c/fields/Guidance_Text__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Text__c</fullName>
    <label>Guidance Text</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <inlineHelpText>Shown below path on active stage</inlineHelpText>
</CustomField>