force-app/main/default/objects/Custom_Path_Mapping__c/fields/Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Object_Mapping__c</fullName>
    <label>Object Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>Custom_Object_Mapping__c</referenceTo>
    <relationshipLabel>Custom Path Mappings</relationshipLabel>
    <relationshipName>Custom_Path_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>