force-app/main/default/objects/Custom_Path_Mapping__c/fields/Stage_Label__c.field-meta.xml
<CustomField>
    <fullName>Stage_Label__c</fullName>
    <label>Stage Label</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Display label on path</inlineHelpText>
</CustomField>