force-app/main/default/objects/Custom_Path_Mapping__c/fields/Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order__c</fullName>
    <label>Stage Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>Used when Stage Order Source is Custom Order</inlineHelpText>
</CustomField>