force-app/main/default/objects/Custom_Path_Mapping__c/fields/Stage_Value__c.field-meta.xml
<CustomField>
    <fullName>Stage_Value__c</fullName>
    <label>Stage Value</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Must match picklist value exactly</inlineHelpText>
</CustomField>